--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@jiman24/commandment": "^0.4.0",
     "@jiman24/discordjs-button": "^0.1.0",
+    "@jiman24/discordjs-pagination": "^0.0.3",
     "@jiman24/discordjs-prompt": "^0.0.1",
     "@jiman24/discordjs-rpg": "^3.1.0",
     "common-tags": "^1.8.2",
